# chv

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONNECTION_DETAILS.txt  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  Dockerfile  Dockerfile.agent  Dockerfile.controller  FINAL_IMPLEMENTATION_REPORT.md  HOST_DEPLOYMENT.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  Makefile  NEXT_STEPS_PLAN.md  PHASED_IMPLEMENTATION_PLAN.md  README.md  REPOSITORY_DIRECTION.md  SECURITY.md  STATE_REPORT.md  TODOS.md  UI_ANALYSIS_AND_PLAN.md  chv-agent.service  chv-controller.service  comprehensive-review-report.md  docker-compose.prod.yml  docker-compose.yml  github-pages-index.html  go.mod  go.sum  install.sh  skills-lock.json  start-chv.sh  task_plan.md
.Jules/: palette.md
.agents/: IMPLEMENTATION_PLAN.md
.claude/: session-reads.txt
chv-ui/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
cmd/chv-agent/: Cargo.toml
cmd/chv-agent/src/: main.rs
cmd/chv-controlplane/: Cargo.toml
cmd/chv-controlplane/migrations/: 0001_initial.sql  0002_inventory_bootstrap.sql  0003_bootstrap_tokens.sql  0004_network_exposures.sql  0005_lifecycle_intent.sql  0006_vm_nic_state.sql  0007_images.sql  0008_users.sql  0009_network_cidr.sql  0010_network_ipam.sql  0011_short_ids.sql  0012_cloud_init.sql  0013_templates.sql  0014_firewall_rules.sql  0015_storage_pools.sql  0016_snapshots.sql  0017_api_tokens.sql  0018_vm_metrics.sql  0019_vm_exports.sql  0020_quotas.sql  0021_hypervisor_settings.sql  0022_kvm_capabilities.sql  0023_backup_jobs.sql  0024_backups.sql  0025_volume_snapshot_clone.sql  0026_network_services.sql  0027_owner_id.sql  0028_backup_schedule_last_run.sql  0029_node_ws_address.sql
cmd/chv-controlplane/src/: bootstrap.rs  config.rs  main.rs
cmd/chv-nwd/: Cargo.toml
cmd/chv-nwd/src/: main.rs
cmd/chv-stord/: Cargo.toml
cmd/chv-stord/src/: main.rs
configs/: agent-tls.yaml  agent.yaml  chv.yaml  controller-tls.yaml  controller.docker.yaml  controller.yaml  schema.sql  schema_sqlite.sql
crates/chv-agent-core/: Cargo.toml
crates/chv-agent-core/src/: agent_server.rs  cache.rs  config.rs  console_server.rs  control_plane.rs  daemon_clients.rs  enrollment.rs  health.rs  inventory.rs  lib.rs  reconcile.rs  spec.rs  state_machine.rs  supervisor.rs  telemetry.rs  vm_runtime.rs
crates/chv-agent-runtime-ch/: Cargo.toml
crates/chv-agent-runtime-ch/src/: adapter.rs  lib.rs  mock.rs  process.rs
crates/chv-config/: Cargo.toml
crates/chv-config/src/: lib.rs
crates/chv-controlplane-service/: Cargo.toml
crates/chv-controlplane-service/src/: backup_worker.rs  bff_mutations.rs  container.rs  enrollment.rs  error.rs  hypervisor_settings_validator.rs  inventory.rs  lib.rs  lifecycle.rs  node_client.rs  node_client_pool.rs  orchestrator.rs  reconcile.rs  server.rs  telemetry.rs  tests.rs
crates/chv-controlplane-service/src/api/: health.rs  mod.rs  nodes.rs  operations.rs  router.rs  stub.rs
crates/chv-controlplane-store/: Cargo.toml
crates/chv-controlplane-store/src/: alerts.rs  backup_jobs.rs  backups.rs  bootstrap_tokens.rs  db.rs  desired_state.rs  events.rs  hypervisor_settings.rs  lib.rs  network_exposures.rs  nodes.rs  observed_state.rs  operations.rs  test_util.rs  tests.rs
crates/chv-nwd-core/: Cargo.toml
crates/chv-nwd-core/src/: executor.rs  handlers.rs  lib.rs  server.rs  state.rs  store.rs
crates/chv-nwd-core/tests/: nwd_daemon.rs
crates/chv-stord-backends/: Cargo.toml
crates/chv-stord-backends/src/: lib.rs  local.rs  lvm.rs  trait.rs
crates/chv-stord-core/: Cargo.toml
crates/chv-stord-core/src/: handlers.rs  lib.rs  server.rs  session.rs  store.rs
crates/chv-stord-core/tests/: smoke.rs
crates/chv-webui-bff/: Cargo.toml
crates/chv-webui-bff/src/: auth.rs  cache.rs  correlation_middleware.rs  error.rs  lib.rs  metrics_middleware.rs  mutations.rs  router.rs
crates/chv-webui-bff/src/handlers/: auth.rs  backups.rs  clusters.rs  events.rs  exports.rs  firewall.rs  hypervisor_settings.rs  images.rs  imports.rs  maintenance.rs  metrics.rs  mod.rs  networks.rs  nodes.rs  overview.rs  quotas.rs  settings.rs  snapshots.rs  storage.rs  tasks.rs  templates.rs  tokens.rs  users.rs  vms.rs  volumes.rs
deploy/: README.md  agent.Dockerfile  bootstrap.Dockerfile  controller.Dockerfile  entrypoint.sh
derived_rules/: chv_rules.md
docs/: API.md  API_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DEPLOYMENT.md  DESIGN_AUDIT_2026-04-09.md  E2E_TEST_RESULTS.md  GAP_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_REMAINING.md  IMPLEMENTATION_REVIEW_COMPLETE.md  IMPLEMENTATION_SUMMARY_ALL.md  INSTALL.md  LEFTOVERS_COMPLETE.md  LEFTOVERS_PLAN.md  MULTI_NODE_IMPLEMENTATION.md  MVP2-CloudHypervisor-Design.md  NEXT_STEPS_IMPLEMENTED.md  NEXT_STEPS_PLAN.md  OPERATIONS.md  PHASE2A_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_STATUS_REPORT.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE7_TEST_RESULTS.md  REVIEW_AND_NEXT_STEPS.md  ROADMAP.md  TLS_SETUP.md  TODO_IMPLEMENTATION_STUBS.md  UI_DESIGN_SPEC.md  VM_VALIDATION.md  WEBUI_CHANGES.md  WEBUI_GAP_ANALYSIS.md  design-preview.html  docs.go  gap-analysis-2026-04-19.md  gap-analysis-mockups.html  load-testing.md  metadata-service.md  (+3 more)
e2e/: doc.go  harness_test.go  node_operations_test.go  vm_lifecycle_test.go
examples/: README.md  agent-config.yaml  setup-bridge.sh  tls-demo.sh  vm-basic.yaml  vm-bridge.yaml  vm-console.yaml  vm-ubuntu.yaml
scripts/: build-release.sh  bump-version.sh  dev-install.sh  install.sh  load-test.sh  missing.txt  smoke-webui-auth.sh
ui/: .dockerignore  .gitignore  DESIGN.md  Dockerfile  activity_check.txt  activity_check_2.txt  activity_check_3.txt  activity_check_4.txt  activity_check_5.txt  activity_check_6.txt  activity_check_7.txt  check_final.txt  check_out.txt  check_out_2.txt  check_out_3.txt  check_out_4.txt  check_out_5.txt  check_out_detail_1.txt  check_out_detail_2.txt  check_out_detail_3.txt  (+7 more)
(+1434 files in other folders)
