[workspace]
members = [
    "cmd/chv-stord",
    "crates/chv-common",
    "crates/chv-errors",
    "crates/chv-observability",
    "crates/chv-config",
    "crates/chv-controlplane-types",
    "crates/chv-controlplane-store",
    "crates/chv-controlplane-service",
    "crates/chv-stord-core",
    "crates/chv-stord-backends",
    "gen/rust/chv-stord-api",
    "cmd/chv-nwd",
    "crates/chv-nwd-core",
    "gen/rust/chv-nwd-api",
    "cmd/chv-agent",
    "cmd/chv-controlplane",
    "crates/chv-agent-core",
    "crates/chv-agent-runtime-ch",
    "gen/rust/control-plane-node-api",
    "gen/rust/chv-webui-bff-api",
    "crates/chv-webui-bff",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
rand = "0.9"
hex = "0.4"
sha2 = "0.10"
metrics = "0.24"
tokio-stream = "0.1"
dashmap = "6"
tempfile = "3"
tower = "0.5"
hyper-util = { version = "0.1", features = ["client", "server", "tokio"] }
metrics-exporter-prometheus = "0.16"
jsonwebtoken = "9"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.7"
bcrypt = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "derive", "json", "uuid", "chrono"] }
nix = { version = "0.29", features = ["term", "ioctl", "process"] }
