[package]
name = "chv-agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chv-common = { path = "../chv-common" }
chv-errors = { path = "../chv-errors" }
chv-observability = { path = "../chv-observability" }
chv-config = { path = "../chv-config" }
chv-agent-runtime-ch = { path = "../chv-agent-runtime-ch" }
chv-stord-api = { path = "../../gen/rust/chv-stord-api" }
chv-nwd-api = { path = "../../gen/rust/chv-nwd-api" }
control-plane-node-api = { path = "../../gen/rust/control-plane-node-api" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true, features = ["ws"] }
libc = "0.2"
futures-util = "0.3"
nix = { workspace = true, features = ["term", "ioctl", "process"] }
jsonwebtoken = { workspace = true }
lru = "0.12"

[dev-dependencies]
tempfile = { workspace = true }
