[package]
name = "chv-controlplane-service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chv-controlplane-types = { path = "../chv-controlplane-types" }
chv-controlplane-store = { path = "../chv-controlplane-store" }
chv-webui-bff = { path = "../chv-webui-bff" }
chv-webui-bff-api = { path = "../../gen/rust/chv-webui-bff-api" }
control-plane-node-api = { path = "../../gen/rust/control-plane-node-api" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt.workspace = true

[dev-dependencies]
x509-parser = "0.16"
chv-controlplane-store = { path = "../chv-controlplane-store", features = ["test-util"] }
