[package]
name = "chv-controlplane-store"
version = "0.1.0"
edition = "2021"
publish = false

[features]
test-util = []

[dependencies]
chv-common = { path = "../chv-common" }
chv-controlplane-types = { path = "../chv-controlplane-types" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true, features = ["uuid", "chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
