[package]
name = "chv-nwd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chv-common = { path = "../chv-common" }
chv-errors = { path = "../chv-errors" }
chv-observability = { path = "../chv-observability" }
chv-nwd-api = { path = "../../gen/rust/chv-nwd-api" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
rusqlite = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
