[package]
name = "chv-stord-backends"
version = "0.1.0"
edition = "2021"

[dependencies]
chv-common = { path = "../chv-common" }
chv-errors = { path = "../chv-errors" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
