[package]
name = "chv-webui-bff"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chv-webui-bff-api = { path = "../../gen/rust/chv-webui-bff-api" }
chv-controlplane-store = { path = "../chv-controlplane-store" }
chv-controlplane-types = { path = "../chv-controlplane-types" }
chv-common = { path = "../chv-common" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls"] }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
chrono = "0.4"
